--- a/src/styles.css
+++ b/src/styles.css
@@ -35,7 +35,7 @@
 
 .header-icons {
   display: flex;
-  gap: 15px;
+  column-gap: 25px;
   align-items: center;
 }
 
@@ -228,11 +228,6 @@
   .search-bar {
     width: 80%;
     font-size: 0.9rem;
-  }
-
-  .header-icons {
-    justify-content: center;
-    gap: 10px;
   }
 
   .icon {
